Se prepara proyecto para generación de ejecutable. Se cambia nombre de los paquetes de mx a com. Se cambia para que la versión mínima de JDK soportada sea 17. Se adapta a java modular. Se realiza downgrade de las bibliotecas de bouncycastle a la versión 1.82 derivado de un bug en la versión 1.83 con la herramienta jlink en relación al manejo de los módulos (https://github.com/bcgit/bc-java/issues/2222). Se agrega al README información sobre el ejecutable y se actualiza release a la versión 1.1.0